--- a/index.html
+++ b/index.html
@@ -16,13 +16,30 @@
     <!--jQuery link-->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <!--JS link-->
-    <script type="text/javascript" src="./assets/javascipt/game.js"></script>
+    <script type="text/javascript" src="./assets/javascipt/app.js"></script>
 
 </head>
 
 <body>
+    <div class="container">
 
-    
+        <header class="row">
+            <h1>Trivia Time!</h1>
+        </header>
+        <hr/>
+
+        <section>
+            <!--timer container-->
+            <div class="timeout">Time Remaining: <span id="timeLeft">0</span> Seconds</div>
+            <!--question container-->
+            <div id="question">What is the 4th planet from the sun?</div>
+            <!--answers container-->
+            <div id="answers">Mercury<br/>Mars<br/>Venus<br/>Jupiter</div>
+        </section>
+        
+
+    </div>  
+    <footer></footer>  
 </body>
 
 </html>
