JS couple of variables defined, pseudo written

--- a/index.html
+++ b/index.html
@@ -9,14 +9,10 @@
     <title>Trivia Game</title>
 
     <!--CSS links-->
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/style.css">
-
-    <!--jQuery link-->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <!--JS link-->
-    <script type="text/javascript" src="./assets/javascipt/app.js"></script>
 
 </head>
 
@@ -35,11 +31,19 @@
             <div id="question">What is the 4th planet from the sun?</div>
             <!--answers container-->
             <div id="answers">Mercury<br/>Mars<br/>Venus<br/>Jupiter</div>
+            
         </section>
         
 
-    </div>  
-    <footer></footer>  
+    </div> 
+
+    <footer></footer> 
+
+    <!--jQuery link-->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <!--JS link-->
+    <script type="text/javascript" src="./assets/javascipt/app.js"></script>
+
 </body>
 
 </html>
