JS start button and 'page' initialization added

--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/style.css">
 
+    <!--jQuery link-->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <!--JS link-->
+    <script type="text/javascript" src="./assets/javascript/app.js"></script>
+
 </head>
 
 <body>
@@ -24,25 +29,37 @@
         </header>
         <hr/>
 
-        <section>
+        <!--game start 'page'-->
+        <div id="start" class="col-md-6 offset-md-3 option">
+            START!
+        </div>
+
+        <!--game 'page'-->
+        <section id="game">
+
             <!--timer container-->
             <div class="timeout">Time Remaining: <span id="timeLeft">0</span> Seconds</div>
             <!--question container-->
             <div id="question">What is the 4th planet from the sun?</div>
             <!--answers container-->
             <div id="answers">Mercury<br/>Mars<br/>Venus<br/>Jupiter</div>
-            
-        </section>
+
+        </section> 
+
+        <!--results 'page'-->
+        <div id="results">
+
+        </div>
+
+        <!--gameEnd 'page'-->
+        <div id="gameEnd">
+
+        </div>
         
 
     </div> 
 
     <footer></footer> 
-
-    <!--jQuery link-->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <!--JS link-->
-    <script type="text/javascript" src="./assets/javascipt/app.js"></script>
 
 </body>
 
