JS set up page change to result page and adding result counters

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>Trivia Game</title>
+    <title>TV Trivia Game</title>
 
     <!--CSS links-->
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
@@ -25,13 +25,13 @@
     <div class="container">
 
         <header class="row">
-            <h1>Trivia Time!</h1>
+            <h1>TV Trivia Time!</h1>
         </header>
         <hr />
 
         <!--game start 'page'-->
         <div id="start">
-            <div class="col-md-6 offset-md-3 option">
+            <div class="col-md-6 offset-md-3 options">
                 START!
             </div>
         </div>
@@ -52,8 +52,11 @@
 
         <!--results 'page'-->
         <div id="results">
-
+            <div id="correct">Correct: 0</div>
+            <div id="incorrect">Incorrect: 0</div>
+            <div id="unanswered">Unanswered: 0</div>
         </div>
+
 
         <!--gameEnd 'page'-->
         <div id="gameEnd">
