JS questions complete, cycling correctly

--- a/index.html
+++ b/index.html
@@ -52,15 +52,16 @@
 
         <!--results 'page'-->
         <div id="results">
-            <div id="correct">Correct: 0</div>
-            <div id="incorrect">Incorrect: 0</div>
-            <div id="unanswered">Unanswered: 0</div>
+            <div id="correctAnswer"></div>
+            <div id="incorrectAnswer"></div>
         </div>
 
 
         <!--gameEnd 'page'-->
         <div id="gameEnd">
-
+            <div id="correct">Correct: 0</div>
+            <div id="incorrect">Incorrect: 0</div>
+            <div id="unanswered">Unanswered: 0</div>
         </div>
 
 
