JS HTML JOBS DONE

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <section id="game">
 
             <!--timer container-->
-            <div class="timeout">Time Remaining: <span id="timeLeft">20</span> Seconds</div>
+            <div class="timeout" id="timeLeft"></div>
 
             <!--question container-->
             <div id="question"></div>
@@ -54,14 +54,15 @@
         <div id="results">
             <div id="correctAnswer"></div>
             <div id="incorrectAnswer"></div>
+            <div id="unAnswer"></div>
         </div>
 
 
         <!--gameEnd 'page'-->
         <div id="gameEnd">
-            <div id="correct">Correct: 0</div>
-            <div id="incorrect">Incorrect: 0</div>
-            <div id="unanswered">Unanswered: 0</div>
+            <div id="correct"></div>
+            <div id="incorrect"></div>
+            <div id="unanswered"></div>
         </div>
 
 
